# imsettings

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  imsettings-uninstalled.pc.in  imsettings.pc.in  requires
applet/: Makefile.am  imsettings-applet.desktop.in.in  imsettings-applet.schema  imsettings-applet.schemas.in  main.c  radiomenuitem.c  radiomenuitem.h
backends/: Makefile.am
backends/gconf/: Makefile.am  gconf-im-settings-daemon.service.in  gconf-module.c  introspection.xml  main.c
backends/lxde/: Makefile.am  imsettings-lxde-helper.desktop.in  introspection.xml  lxde-im-settings-daemon.service.in  lxde-module.c  main.c
backends/qt/: Makefile.am  introspection.xml  main.cpp  qt-im-settings-daemon.service.in  qt-imsettings.cpp  qt-imsettings.h  qt-module.cpp
backends/xfce/: Makefile.am  imsettings_plugin.c  xfce-module.c
backends/xfce_mcs/: Makefile.am
backends/xfce_xfconf/: Makefile.am  imsettings-xfce-helper.desktop.in  main.c
backends/xim/: Makefile.am  client.c  client.h  compose.c  compose.h  connection.c  connection.h  loopback.c  loopback.h  main.c  protocol.c  protocol.h  proxy.c  proxy.h  server.c  server.h  utils.c  utils.h  xim-module.c
data/: Makefile.am  none.in.in  xim.in.in  xinput.sh.in.in  xinputinfo.sh.in
imsettings/: Makefile.am  imsettings-client.c  imsettings-client.h  imsettings-info-private.h  imsettings-info.c  imsettings-info.h  imsettings-module.c  imsettings-module.h  imsettings-object.c  imsettings-object.h  imsettings-observer.c  imsettings-observer.h  imsettings-request.c  imsettings-request.h  imsettings-utils.c  imsettings-utils.h  imsettings-xsettings.c  imsettings-xsettings.h  imsettings.h  imsettings.xml  marshal.list
imsettings-daemon/: Makefile.am  imsettings-daemon.service.in  imsettings-proc.c  imsettings-proc.h  imsettings-server.c  imsettings-server.h  main.c  marshal.list
m4macros/: tar.m4
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  as.po  be.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu_ES.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  imsettings.pot  is.po  it.po  ja.po  ka.po  kn.po  (+39 more)
src/: Makefile.am  factory.c  factory_info.c  factory_xsettings.c  im-info-daemon.service.in  monitor.c  monitor.h
tests/: Makefile.am  gcit_11.c  gcit_13.c  gcit_5.c  gcit_7.c  imsettings-info.c  imsettings-object.c  imsettings-request.c  main.c  main.h  rhbz_431291.c  rhbz_453358.c  rhbz_455363.c  rhbz_471833.c  rhbz_490587.c  rhbz_510666.c  rhbz_514852.c  rhbz_523349.c  rhbz_526205.c  rhbz_599924.c
tests/testcases/: Makefile.am  test-scim.conf  xim.conf
tests/testcases/imsettings-request/currentim/: .xinputrc  xinputrc
tests/testcases/issue_13/case1/: xinputrc
tests/testcases/issue_13/case1/xinput.d/: kinput2-canna  none.conf  scim.conf
tests/testcases/issue_13/case2/xinput.d/: ja_JP  scim.conf
tests/testcases/issue_13/case3/: xinputrc
tests/testcases/issue_13/case3/xinput.d/: xim.conf
tests/testcases/issue_5/: xinputrc
tests/testcases/rhbz_431291/case1/: .xinputrc
tests/testcases/rhbz_453358/case1/: xinputrc
tests/testcases/rhbz_453358/case1/xinput.d/: test-scim2.conf
tests/testcases/rhbz_455363/case1/: xinputrc
tests/testcases/rhbz_471833/case1/xinput.d/: test-scim.conf  test-scim2.conf
tests/testcases/rhbz_490587/case1/xinput.d/: test-scim.conf
tests/testcases/rhbz_510666/case1/: xinputrc
tests/testcases/rhbz_514852/case1/: xinputrc
tests/testcases/rhbz_514852/case1/alternatives/: xinputrc
tests/testcases/rhbz_514852/case1/xinput.d/: test-uim.conf
tests/testcases/rhbz_523349/: xinputrc
tests/testcases/rhbz_523349/case1/xinput.d/: test-scim.conf
tests/testcases/rhbz_526205/case1/xinput.d/: pt_BR  xim.conf
tests/testcases/rhbz_599924/xinput.d/: xim.conf  xim2.conf
utils/: Makefile.am  imsettings-info.c  imsettings-list.c  imsettings-reload.c  imsettings-restart.c  imsettings-start.c  imsettings-start.desktop.in  imsettings-stop.c  imsettings-switch.c
